# colcon-lcov-result

./: .gitignore  DEVELOPING.md  README.rst  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: ci.yaml  package.yml  test.yml
colcon_coverage_result/verb/: coverage_result.py
colcon_coverage_result/verb/configuration/: lcovrc
colcon_lcov_result/: __init__.py
colcon_lcov_result/task/: __init__.py  lcov.py
colcon_lcov_result/verb/: __init__.py  lcov_result.py
test/: spell_check.words  test_flake8.py  test_spell_check.py
