[metadata]
name = colcon-lcov-result
version = attr: colcon_lcov_result.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-lcov-result/milestones?state=closed
    GitHub = https://github.com/colcon/colcon-lcov-result/
author = Juan Pablo Samper
author_email = jp.samper@apex.ai
maintainer = Juan Pablo Samper
maintainer_email = jp.samper@apex.ai
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to gather test results.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
    colcon-core>=0.5.6
packages = find:
tests_require =
    flake8
    flake8-blind-except
    flake8-builtins
    flake8-class-newline
    flake8-comprehensions
    flake8-deprecated
    flake8-docstrings
    flake8-import-order
    flake8-quotes
    pep8-naming
    pyenchant
    pylint
    pytest
    pytest-cov
zip_safe = true

[options.package_data]
colcon_lcov_result.verb.configuration = lcovrc

[options.entry_points]
colcon_core.verb =
    lcov-result = colcon_lcov_result.verb.lcov_result:LcovResultVerb

[flake8]
import-order-style = google
max-line-length = 99
